Fix to make overflow work properly on the sidebar to prevent item cutoff.

--- a/docs/.vuepress/theme/styles/custom/components/_sidebar.scss
+++ b/docs/.vuepress/theme/styles/custom/components/_sidebar.scss
@@ -35,7 +35,7 @@ $sidebar-button-left-spacing: 1.5rem;
   // background-color: #fff;
   font-size: $base-font-size;
   width: $sidebarWidth;
-  min-height: 100vh;
+  height: 100vh;
   padding-top: $navbarHeight;
 
   .nav-item {
